setup: create first theming tests

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,54 @@
   <link rel="stylesheet" type="text/css" href="style.compiled.css">
 </head>
 <body>
-  <main class="mt-6">
-    <h1>Tailwind Theming built with Snowpack</h1>
+  <main class="p-4">
+    <h1>Heading 1</h1>
+      <h2>Heading 2</h2>
+      <h3>Heading 3</h3>
+      <h4>Heading 4</h4>
+      <h5>Heading 5</h5>
+      <h6>Heading 6</h6>
+      <h2>Heading 2</h2>
+      <p>
+        Im CityLAB wird Innovation und Partizipation zusammen­gedacht:
+        <i>Verwaltung und Stadtgesellschaft</i> arbeiten hier gemeinsam an
+        Lösungen für <b>das digitale Berlin von Morgen</b>.
+      </p>
+      <h2>Heading 2</h2>
+      <p>
+        Veranstaltung, Co-Working oder eigene Idee weiterentwickeln: das CityLAB
+        ist ein Ort der <mark>Kollaboration</mark>. Wenn du bei den Themen
+        <q>Civic Tech, GovTech, sozialer Innovation und Smart Cities</q>
+        mitwirken möchtest, kontaktiere uns ganz unkompliziert oder komm direkt
+        im <a href="#">CityLAB</a> vorbei.
+      </p>
+      <blockquote>
+        Du planst einen kreativen Workshop, ein Meetup oder eine öffentliche
+        Veranstaltung zur digitalen Stadt? Nutze unsere Räume im ehemaligen
+        Flughafen Tempelhof.
+      </blockquote>
+      <h2>Heading 2</h2>
+      <p>
+        Du planst einen kreativen <mark>Workshop</mark>, ein Meetup oder eine
+        öffentliche Veranstaltung zur digitalen Stadt? Nutze unsere Räume im
+        ehemaligen <s>Flughafen</s> Tempelhof.
+      </p>
+      <p>
+        Das CityLAB bietet kostenlose Co-Working-Plätze für
+        gemeinwohlorientierte Projekte.
+        <code>docker run docker/hello-world</code> Werde Teil unserer Community
+        und bewirb dich für ein Co-Working Fellowship.
+      </p>
+      <p>
+        <var>a<sup>2</sup></var> + <var>b<sup>2</sup></var> =
+        <var>c<sup>2</sup></var>
+      </p>
+      <p>
+        Almost every developer's favorite molecule is
+        C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>, also known as
+        "caffeine."
+      </p>
+      <button>Simple button</button>
   </main>
 </body>
 </html>
