--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="style.compiled.css">
-</head>
-<body>
-  <main class="p-4">
-    <h1>Heading 1</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CityLAB Berlin Theme</title>
+    <link rel="stylesheet" type="text/css" href="style.compiled.css" />
+  </head>
+  <body>
+    <header>Header</header>
+    <main class="p-4">
+      <h1>Heading 1</h1>
       <h2>Heading 2</h2>
       <h3>Heading 3</h3>
       <h4>Heading 4</h4>
@@ -55,6 +56,7 @@
         "caffeine."
       </p>
       <button>Simple button</button>
-  </main>
-</body>
+    </main>
+    <footer>Footer</footer>
+  </body>
 </html>
