--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.compiled.css" />
   </head>
   <body>
-    <header><img src="assets/citylab_logo.svg" alt="CityLAB Berlin Logo"></header>
+    <header><img src="assets/citylab_logo.svg" alt="CityLAB Berlin Logo" class="inline-block"><h1 class="inline-block ml-3 text-2xl">Styling Utilities</h1></header>
     <main class="p-4">
       <h1>Heading 1</h1>
       <h2>Heading 2</h2>
