--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" type="text/css" href="style.compiled.css" />
   </head>
   <body>
-    <header><img src="assets/citylab_logo.svg" alt="CityLAB Berlin Logo" class="inline-block"><h1 class="inline-block ml-3 text-2xl">Styling Utilities</h1></header>
+    <header>
+      <img
+        src="assets/citylab_logo.svg"
+        alt="CityLAB Berlin Logo"
+        class="inline-block"
+      />
+      <h1 class="inline-block mt-0 ml-3 text-2xl">Styling Utilities</h1>
+    </header>
     <main class="p-4">
       <h1>Heading 1</h1>
       <h2>Heading 2</h2>
@@ -29,12 +36,27 @@
         mitwirken möchtest, kontaktiere uns ganz unkompliziert oder komm direkt
         im <a href="#">CityLAB</a> vorbei.
       </p>
+      <ul>
+        <li>Unordered list element</li>
+        <li>Unordered list element</li>
+        <li>Unordered list element</li>
+      </ul>
       <blockquote>
-        Du planst einen kreativen Workshop, ein Meetup oder eine öffentliche
-        Veranstaltung zur digitalen Stadt? Nutze unsere Räume im ehemaligen
-        Flughafen Tempelhof.
+        <p>
+          Du planst einen kreativen Workshop, ein Meetup oder eine öffentliche
+          Veranstaltung zur digitalen Stadt? Nutze unsere Räume im ehemaligen
+          Flughafen Tempelhof.
+        </p>
+        <footer>
+          Von der Website des <cite>CityLAB Berlin</cite>
+        </footer>
       </blockquote>
       <h2>Heading 2</h2>
+      <ol>
+        <li>Ordered list element</li>
+        <li>Ordered list element</li>
+        <li>Ordered list element</li>
+      </ol>
       <p>
         Du planst einen kreativen <mark>Workshop</mark>, ein Meetup oder eine
         öffentliche Veranstaltung zur digitalen Stadt? Nutze unsere Räume im
@@ -55,8 +77,25 @@
         C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>, also known as
         "caffeine."
       </p>
+      <figure>
+        <img
+          src="https://www.citylab-berlin.org/images/intro-preview.jpg"
+          alt="Entrance of the CityLAB Berlin"
+          class="w-80"
+        />
+        <figcaption>Entrance of the CityLAB Berlin</figcaption>
+      </figure>
       <button>Simple button</button>
     </main>
-    <footer>Footer</footer>
+    <footer class="p-4 border-t-2 border-secondary-50">
+      <address>
+        <a href="https://www.google.de/maps/@52.4843705,13.3836835,16.65z"
+          >Platz der Luftbrücke 4 <br />12101 Berlin</a
+        ><br />
+        <a href="mailto:info@citylab-berlin.org">info@citylab-berlin.org</a
+        ><br />
+        <a href="tel:+4930959996410">+49(0) 30 95 99 96 410</a>
+      </address>
+    </footer>
   </body>
 </html>
