style: add more base styles (colors, elements)

--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,7 @@
               <label for="newsletter-frequency-monthly">Monatlich</label>
             </div>
           </div>
+          <hr class="mt-4">
           <div class="mt-4">
             <input type="checkbox" name="" id="newsletter-consent" required />
             <label for="newsletter-consent"
@@ -151,6 +152,10 @@
         <li>Ordered list element</li>
         <li>Ordered list element</li>
       </ol>
+      <details class="sm:w-96">
+        <summary>Eine Summary</summary>
+        <p>Ein langer Details-Text. Ein langer Details-Text. Ein langer Details-Text. Ein langer Details-Text.</p>
+      </details>
       <p>
         Du planst einen kreativen <mark>Workshop</mark>, ein Meetup oder eine
         öffentliche Veranstaltung zur digitalen Stadt? Nutze unsere Räume im
