--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
               <label for="newsletter-frequency-monthly">Monatlich</label>
             </div>
           </div>
-          <hr class="mt-4">
+          <hr class="mt-4" />
           <div class="mt-4">
             <input type="checkbox" name="" id="newsletter-consent" required />
             <label for="newsletter-consent"
@@ -154,7 +154,10 @@
       </ol>
       <details class="sm:w-96">
         <summary>Eine Summary</summary>
-        <p>Ein langer Details-Text. Ein langer Details-Text. Ein langer Details-Text. Ein langer Details-Text.</p>
+        <p>
+          Ein langer Details-Text. Ein langer Details-Text. Ein langer
+          Details-Text. Ein langer Details-Text.
+        </p>
       </details>
       <p>
         Du planst einen kreativen <mark>Workshop</mark>, ein Meetup oder eine
@@ -188,12 +191,17 @@
     </main>
     <footer class="p-4 border-t-2 border-blue-50">
       <address>
-        <a href="https://www.google.de/maps/@52.4843705,13.3836835,16.65z"
+        <a
+          href="https://www.google.de/maps/@52.4843705,13.3836835,16.65z"
+          class="text-blue-500 hover:text-blue-400"
           >Platz der Luftbrücke 4 <br />12101 Berlin</a
         ><br />
-        <a href="mailto:info@citylab-berlin.org">info@citylab-berlin.org</a
+        <a href="mailto:info@citylab-berlin.org" class="text-blue-500 hover:text-blue-400"
+          >info@citylab-berlin.org</a
         ><br />
-        <a href="tel:+4930959996410">+49(0) 30 95 99 96 410</a>
+        <a href="tel:+4930959996410" class="text-blue-500 hover:text-blue-400"
+          >+49(0) 30 95 99 96 410</a
+        >
       </address>
     </footer>
   </body>
