style: update anchor styles

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,9 @@
       </p>
       <h2>Heading 2</h2>
       <p>
-        Veranstaltung, Co-Working oder eigene Idee weiterentwickeln: das CityLAB
-        ist ein Ort der <mark>Kollaboration</mark>. Wenn du bei den Themen
+        Veranstaltung, Co-Working oder eigene Idee weiterentwickeln: das
+        <a href="#">CityLAB</a> ist ein Ort der <mark>Kollaboration</mark>. Wenn
+        du bei den Themen
         <q>Civic Tech, GovTech, sozialer Innovation und Smart Cities</q>
         mitwirken möchtest, kontaktiere uns ganz unkompliziert oder komm direkt
         im <a href="#">CityLAB</a> vorbei.
@@ -193,13 +194,13 @@
       <address>
         <a
           href="https://www.google.de/maps/@52.4843705,13.3836835,16.65z"
-          class="text-blue-500 hover:text-blue-400"
+          class="border-b-0"
           >Platz der Luftbrücke 4 <br />12101 Berlin</a
         ><br />
-        <a href="mailto:info@citylab-berlin.org" class="text-blue-500 hover:text-blue-400"
+        <a href="mailto:info@citylab-berlin.org" class="border-b-0"
           >info@citylab-berlin.org</a
         ><br />
-        <a href="tel:+4930959996410" class="text-blue-500 hover:text-blue-400"
+        <a href="tel:+4930959996410" class="border-b-0"
           >+49(0) 30 95 99 96 410</a
         >
       </address>
