style: set padding only in vanilla CSS stylesheet

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       />
       <h1 class="inline-block mt-0 ml-3 text-2xl">Styling Utilities</h1>
     </header>
-    <main class="p-4">
+    <main>
       <h1>Heading 1</h1>
       <h2>Heading 2</h2>
       <h3>Heading 3</h3>
@@ -194,7 +194,7 @@
       </figure>
       <button>Simple button</button>
     </main>
-    <footer class="p-4 border-t-2 border-blue-50">
+    <footer class="border-t-2 border-blue-50">
       <address>
         <a
           href="https://www.google.de/maps/@52.4843705,13.3836835,16.65z"
