chore: add some meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CityLAB Berlin Theme</title>
+    <title>CityLAB Berlin Styling Utilities</title>
+
+    <meta
+      name="description"
+      content="Styling utilities for CityLAB Berlin websites and apps. Either use the utilities for TailwindCSS (recommended) or drop the vanilla CSS stylesheet into your project."
+    />
+    <meta name="keywords" content="CityLAB Berlin, Styling, TailwindCSS, Theme">
+
+    <meta property="og:url" content="https://citylab-berlin-theme.netlify.app">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="CityLAB Berlin Styling Utilities">
+    <meta property="og:description" content="Styling utilities for CityLAB Berlin websites and apps. Either use the utilities for TailwindCSS (recommended) or drop the vanilla CSS stylesheet into your project.">
+    <meta property="og:image" content="https://citylab-berlin-theme.netlify.app/assets/social_media.png">
+
+    <meta name="twitter:card" content="summary">  
+    <meta name="twitter:site" content="@citylabberlin">
+    <meta name="twitter:creator" content="@citylabberlin">
+    <meta name="twitter:url" content="https://citylab-berlin-theme.netlify.app">
+    <meta name="twitter:title" content="CityLAB Berlin Styling Utilities">
+    <meta name="twitter:description" content="Styling utilities for CityLAB Berlin websites and apps. Either use the utilities for TailwindCSS (recommended) or drop the vanilla CSS stylesheet into your project.">
+    <meta name="twitter:image" content="https://citylab-berlin-theme.netlify.app/assets/social_media.png">
+
+    <meta itemprop="name" content="CityLAB Berlin Styling Utilities">
+    <meta itemprop="description" content="Styling utilities for CityLAB Berlin websites and apps. Either use the utilities for TailwindCSS (recommended) or drop the vanilla CSS stylesheet into your project.">
+    <meta itemprop="image" content="https://citylab-berlin-theme.netlify.app/assets/social_media.png">
+
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="icon" href="/icon.svg" type="image/svg+xml" />
